--- a/kitchen.html
+++ b/kitchen.html
@@ -170,7 +170,8 @@
             { word: "Blender", translation: "Fakki", testTranslations: ["Fakki"], image: "https://i.imgur.com/H3hqLOC.png", link: "https://example.com/lion" },
             { word: "Fridge", translation: "Kiste", testTranslations: ["Kiste"], image: "https://i.imgur.com/eFA1M7s.png", link: "https://example.com/monkey" },
             { word: "Oven", translation: "Eem", testTranslations: ["Eem"], image: "https://i.imgur.com/Pl7gJnf.png", link: "https://example.com/dog" },
-            { word: "Stove", translation: "Vigor", testTranslations: ["Vigor"], image: "https://i.imgur.com/OUEHm1k.png", link: "https://example.com/elephant" },			
+            { word: "Stove", translation: "Vigor", testTranslations: ["Vigor"], image: "https://i.imgur.com/OUEHm1k.png", link: "https://example.com/elephant" },	
+            { word: "Funnel", translation: "Kru", testTranslations: ["Kru"], image: "https://i.imgur.com/8BVpaH2.png", link: "https://example.com/lion" },		            
             { word: "Bowl", translation: "Pinz", testTranslations: ["Pinz"], image: "https://i.imgur.com/W2vVSf8.png", link: "https://example.com/dog" }
 
         ];
@@ -450,4 +451,5 @@
         window.onload = init;
     </script>
 </body>
+
 </html>
